# skills-super

./: CATALOG.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  PUBLIC_LAUNCH_CHECKLIST.md  PUBLISHING.md  README.md  ROADMAP.md  catalog.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_feedback.yml  new_skill_request.yml  skill_improvement.yml
scripts/: check_skill_quality.py  export_skill_products.py
super-ai-ml-agents/: INSTALL.md  README.md  SKILL.md
super-ai-ml-agents/agents/: openai.yaml
super-ai-ml-agents/examples/: README.md
super-ai-ml-ops/: INSTALL.md  README.md  SKILL.md
super-ai-ml-ops/agents/: openai.yaml
super-ai-ml-ops/examples/: README.md
super-design-core/: README.md
super-gaming-3d-media/: INSTALL.md  README.md  SKILL.md
super-gaming-3d-media/agents/: openai.yaml
super-gaming-3d-media/examples/: README.md
super-industry-ops/: INSTALL.md  README.md  SKILL.md
super-industry-ops/agents/: openai.yaml
super-industry-ops/examples/: README.md
super-legal-hr-compliance/: INSTALL.md  README.md  SKILL.md
super-legal-hr-compliance/agents/: openai.yaml
super-legal-hr-compliance/examples/: README.md
super-marketing-execution/: INSTALL.md  README.md  SKILL.md
super-marketing-execution/agents/: openai.yaml
super-marketing-execution/examples/: README.md
super-office-docs-presentation/: INSTALL.md  README.md  SKILL.md
super-office-docs-presentation/agents/: openai.yaml
super-seo-foundation/: README.md
super-seo-growth/: INSTALL.md  README.md  SKILL.md
super-seo-growth/scripts/: pyproject.toml
(+28 files in other folders)
